<resources>
    <string name="app_name">TestVKProject</string>
    <string name="welcome">Добро пожаловать в систему!</string>
    <string name="program_continue">Продолжить</string>
    <string name="more">Подробнее</string>
    <string name="retry">Повторить</string>
    <string name="load_more">Загрузить еще</string>
    <string name="back">Назад</string>
    <string name="search">Поиск</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="category">Категории</string>
    <string name="choose_category">Выберите категорию</string>
</resources>