<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="@dimen/back_width"
        android:layout_height="@dimen/back_height"
        android:background="@drawable/button_rounded_welcome"
        android:padding="@dimen/item_default_margin"
        android:text="@string/back"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/item_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/zero"
        app:strokeColor="@color/blue"
        app:strokeWidth="@dimen/stroke_search">

        <SearchView
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:iconifiedByDefault="false"
            android:maxLines="1"
            android:queryHint="@string/search"
            android:showAsAction="ifRoom|collapseActionView"
            android:textSize="@dimen/search_text" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_search"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:background="@color/blue" />

    <TextView
        android:id="@+id/search_nothing_founded_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_found"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@color/blue"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="@dimen/text_size_product_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_default_margin"
        android:layout_gravity="center" />

    <FrameLayout
        android:id="@+id/search_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/button_back_height"
            android:layout_height="@dimen/button_back_height"
            android:layout_gravity="center_vertical|center_horizontal" />
    </FrameLayout>

</LinearLayout>