<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/button_margin">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_more_height"
                android:background="@drawable/button_more"
                android:padding="@dimen/item_default_margin"
                android:text="@string/search"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="@dimen/button_more_text_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/item_default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/category"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_more_height"
                android:background="@drawable/button_rounded_welcome"
                android:padding="@dimen/item_default_margin"
                android:text="@string/category"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/button_more_text_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/item_default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search"
                app:layout_constraintBottom_toTopOf="@id/products_rv"
                app:layout_constraintEnd_toEndOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/btnNext"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_more_height"
                android:background="@drawable/button_rounded_welcome"
                android:padding="@dimen/item_default_margin"
                android:text="@string/load_more"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/button_more_text_size"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_margin="@dimen/item_default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/products_rv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/productProgressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_more_height"
        android:background="@drawable/button_rounded_welcome"
        android:padding="@dimen/item_default_margin"
        android:text="@string/retry"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/button_more_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>